[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multishap"
version = "0.1.0"
description = "Research software for analyzing cross-modal interactions in vision-language models using Shapley-style interaction scores."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Wang Genomic Lab" }
]
keywords = ["multimodal learning", "shapley", "vision-language models", "interpretability", "vqa"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "matplotlib",
  "opencv-python",
  "pillow",
  "numpy",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/WGLab/MultiSHAP"
Repository = "https://github.com/WGLab/MultiSHAP"
Issues = "https://github.com/WGLab/MultiSHAP/issues"

[project.scripts]
multishap = "multishap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
